# capts-arena

./: .gitignore  README.md  pyproject.toml
.capts-arena/: demo_report.json
.capts-arena/runs/demo_001/: kingboard.json
.capts-arena/runs/demo_001/pairwise/: cmp_biocapt_v2_1_baseline_vs_biocapt_v2_1_fluent_but_lying_placeholder_case_001.json  cmp_biocapt_v2_1_baseline_vs_biocapt_v2_1_mem_policy_a_placeholder_case_001.json
.github/workflows/: ci.yml
benchmarks/arena/: README.md  demo_run_matrix.json
docs/: INVERSION_ARENA.md  architecture.md  codex_handoff.md  public_safety.md
examples/: run_matrix.json
examples/reports/: baseline.json  challenger_clean.json  challenger_regressed.json
reports/fixtures/: pairwise_hallucination_loss.json  pairwise_invalid.json  pairwise_stale_rejection_win.json
schemas/: arena_candidate.schema.json  arena_kingboard.schema.json  arena_pairwise_report.schema.json  arena_promotion_decision.schema.json  arena_run_matrix.schema.json  failure_museum_entry.schema.json
src/capts_arena/: bench_matrix.py  cli.py  failure_museum.py  kingboard.py  pairwise.py  promotion_gate.py  score_report.py
tests/: conftest.py  test_arena.py  test_bench_matrix.py
